--- a/src/Index.scss
+++ b/src/Index.scss
@@ -9,7 +9,6 @@ body {
     max-width: 1600px;
     margin: 0 auto;
     padding: 0 30px;
-    // background-color: #f1eadc;
 }
 header {
     padding: 20px;
@@ -18,9 +17,12 @@ header {
     display: flex;
     gap: 40px;
     font-size: 20px;
-    background-color: #f1eadc;
+    color: #fff;
+    opacity: 60%;
+    background: black;
     .shop-bag {
         cursor: pointer;
+        fill: #fff;
     }
     .logo {
         cursor: pointer;
@@ -40,12 +42,10 @@ header {
     display: none;
 }
 .filter {
-    background-color: #f1eadc;
+    width: 293px;
+    border-right: 1px solid;
     .filter__container {
-        width: 400px;
         overflow: hidden;
-        border: 1px solid;
-        border-radius: 20px;
 
         .filter__settings {
             display: flex;
@@ -60,9 +60,8 @@ header {
         }
         .filter__preset {
             margin: 0 auto;
-            width: 300px;
+            width: 250px;
             height: 250px;
-            background-color: inherit;
             text-align: left;
             overflow: scroll;
             display: flex;
@@ -71,7 +70,6 @@ header {
         }
         .filter__preset2 {
             margin: 0 auto;
-            background-color: inherit;
             height: 40px;
             display: flex;
             justify-content: start;
@@ -102,24 +100,22 @@ header {
     }
 }
 .product {
-    width: 100%;
-    align-self: stretch;
-    background-color: #f1eadc;
+    max-width: 80%;
     .product__container {
         width: 100%;
-        height: 100%;
+        // height: 100%;
         .settings__container {
-            padding: 10px 0 0 0;
+            max-width: 100%;
+            padding: 10px 0 0 20px;
             font-size: 16px;
-            background-color: #f1eadc;
             display: flex;
-            justify-content: space-around;
+            gap: 0px;
+            justify-content: start;
             .sort__list {
                 border: 1px solid;
                 border-radius: 20px;
                 font-size: 16px;
                 cursor: pointer;
-                background-color: inherit;
                 &:hover {
                     color: #6e9c9f;
                 }
@@ -128,8 +124,7 @@ header {
                 }
             }
             .search {
-                font-size: 15px;
-                background-color: inherit;
+                font-size: 16px;
                 border: solid 1px;
                 border-radius: 20px;
                 padding: 0 0 0 20px;
@@ -140,34 +135,80 @@ header {
         }
         .goods {
             max-width: 100%;
+            margin: 0 auto;
             .goods__container {
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: start;
                 .cart {
                     border: 1px solid;
                     overflow: hidden;
-                    border-radius: 20px;
                     margin: 10px 10px;
                     display: flex;
                     flex-direction: column;
                     width: 300px;
-
-                    .cartName {
-                        text-align: center;
-                        border: 1px solid;
-                    }
-                    .cartContainer {
-                        width: 300px;
-                        height: 200px;
-                        background-repeat: no-repeat;
-                        background-size: 300px 200px;
-                        .cartAdd {
-                            margin: 70px 50px;
+                    background-position-y: 20px;
+                    background-repeat: no-repeat;
+                    background-size: 300px 240px;
+                    transition: all 2s ease-out;
+                    position: relative;
+                    &:hover {
+                        .cartDescription {
+                            transition: all 0.3s ease-out;
                             opacity: 80%;
                         }
-                        .cartLink {
+                    }
+                    .cartDescription {
+                        white-space: nowrap;
+                        opacity: 0%;
+                        margin-top: 165px;
+                        padding: 0 0 0 10px;
+                        font-family: 'Raleway', sans-serif;
+                        font-size: 16px;
+                        width: 100%;
+                        background-color: #fff;
+                        color: black;
+                    }
+                    .cartName {
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        width: 100%;
+                        border-bottom: 1px solid;
+                        text-align: center;
+                        font-size: 20px;
+                        background-color: #fff;
+                        color: black;
+                    }
+                    .cartPrice {
+                        font-size: 20px;
+                        font-family: 'Raleway', sans-serif;
+                        position: absolute;
+                        top: 265px;
+                        left: 10px;
+                    }
+                    .cartContainer {
+                        position: relative;
+                        width: 100%;
+                        height: 330px;
+                        .cartAdd {
+                            position: absolute;
+                            left: 10px;
+                            bottom: 8px;
+                            width: 45%;
+                            height: 35px;
                             opacity: 80%;
+                            background-color: black;
+                            color: #fff;
+                        }
+                        .cartLink {
+                            position: absolute;
+                            right: 10px;
+                            bottom: 8px;
+                            width: 45%;
+                            height: 35px;
+                            opacity: 80%;
+                            background-color: black;
+                            color: #fff;
                         }
                     }
                 }
@@ -191,7 +232,6 @@ header {
     font-size: 16px;
     text-align: center;
     width: 100%;
-    background-color: #f1eadc;
 }
 .btn {
     margin: 10px 0 0 0;
@@ -199,18 +239,10 @@ header {
     border-radius: 5px;
     padding: 0 5px;
     font-size: 16px;
-    background-color: #f1eadc;
+    opacity: 60%;
     &:hover {
         color: #6e9c9f;
     }
-}
-.cartDescription {
-    border: 1px solid;
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
-    max-width: 200px;
-    background-color: #f1eadc;
-    opacity: 80%;
 }
 
 .bagCartContainer {
