--- a/src/Index.scss
+++ b/src/Index.scss
@@ -4,21 +4,23 @@
 }
 body {
     font-family: 'Raleway', sans-serif;
+    background-color: #f2f3f7;
 }
 .container {
-    max-width: 1600px;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 0 30px;
+    // padding: 0 30px;
 }
 header {
-    padding: 20px;
-    justify-content: space-between;
-    margin: 0 auto;
+    padding: 20px 0;
+    justify-content: space-around;
     display: flex;
     gap: 40px;
     font-size: 20px;
     color: #fff;
-    opacity: 60%;
     background: black;
     .shop-bag {
         cursor: pointer;
@@ -26,47 +28,75 @@ header {
     }
     .logo {
         cursor: pointer;
+        &:hover {
+            color: orange;
+            transition: all ease 0.5s;
+        }
     }
 }
 .shop-bag:hover svg path {
-    fill: #6e9c9f;
+    fill: orange;
     transition: all 0.5s;
 }
-
+.main {
+    position: relative;
+    flex: 1;
+}
 .main__container {
     display: flex;
-    max-width: 1600px;
+    max-width: 1263px;
     padding: 0 0 30px 0;
+    gap: 10px;
+    margin: 0 auto;
 }
 .hide {
     display: none;
 }
 .filter {
     width: 293px;
-    border-right: 1px solid;
     .filter__container {
         overflow: hidden;
-
+        margin: 0 0 0 20px;
         .filter__settings {
             display: flex;
             white-space: nowrap;
-            justify-content: space-around;
+            justify-content: flex-end;
         }
         .filter__border {
-            border: 1px solid;
-            border-radius: 20px;
-            margin: 10px;
+            // border: 1px solid;
+            // border-radius: 20px;
+            margin: 20px 0 20px 0;
             padding: 10px;
+            background-color: #fff;
         }
+
         .filter__preset {
             margin: 0 auto;
             width: 250px;
-            height: 250px;
+            height: 345px;
+            // font-size: 14px;
+            gap: 5px;
             text-align: left;
-            overflow: scroll;
+            overflow-y: scroll;
             display: flex;
             justify-content: start;
             flex-direction: column;
+            &::-webkit-scrollbar {
+                width: 5px;
+                height: 5px;
+                background-color: #f1f1f1;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: #11171a;
+                width: 1px;
+                border-radius: 10px;
+            }
+            &::-webkit-scrollbar-track {
+                background-color: rgba(255, 255, 255, 0.1);
+                border-radius: 10px;
+                width: 1px;
+                height: 1px;
+            }
         }
         .filter__preset2 {
             margin: 0 auto;
@@ -90,63 +120,84 @@ header {
             font-family: 'Raleway', sans-serif;
             font-size: 16px;
         }
+        .filter__copy {
+            display: none;
+        }
+        .filter__reset {
+            margin: 25px 10px 7px 0;
+            padding: 10px;
+            background-color: #000;
+            color: #fff;
+            &:hover {
+                color: orange;
+                transition: all ease 0.5s;
+            }
+        }
     }
     .Input {
-        font-size: 16px;
         color: black;
     }
     .Label {
+        margin: 0 0 0 10px;
+        font-size: 16px;
+        line-height: 16px;
+        vertical-align: bottom;
         user-select: none;
     }
 }
 .product {
-    max-width: 80%;
+    max-width: 100%;
     .product__container {
         width: 100%;
         // height: 100%;
         .settings__container {
             max-width: 100%;
-            padding: 10px 0 0 20px;
+            padding: 20px 10px 0 0px;
             font-size: 16px;
             display: flex;
-            gap: 0px;
-            justify-content: start;
+            gap: 20px;
+            justify-content: end;
             .sort__list {
+                width: 300px;
+                height: 50px;
                 border: 1px solid;
-                border-radius: 20px;
                 font-size: 16px;
                 cursor: pointer;
                 &:hover {
-                    color: #6e9c9f;
-                }
-                &:active {
-                    color: #6e9c9f;
+                    color: orange;
+                    transition: all ease 0.5s;
                 }
             }
             .search {
+                width: 300px;
                 font-size: 16px;
                 border: solid 1px;
-                border-radius: 20px;
                 padding: 0 0 0 20px;
                 &:focus {
-                    color: #6e9c9f;
+                    color: orange;
                 }
             }
         }
         .goods {
-            max-width: 100%;
+            max-width: 960px;
             margin: 0 auto;
             .goods__container {
-                display: flex;
-                flex-wrap: wrap;
+                margin: 0 auto;
+                .goods__flex {
+                    padding: 10px 0 0 0;
+                    display: inline-flex;
+                    flex-wrap: wrap;
+                }
                 .cart {
-                    border: 1px solid;
+                    box-shadow: 0 2px 11px 0 #e4e4e4;
+                    background-color: #fff;
                     overflow: hidden;
                     margin: 10px 10px;
                     display: flex;
                     flex-direction: column;
                     width: 300px;
-                    background-position-y: 20px;
+                    padding: 15px 0;
+                    background-position-y: 45px;
                     background-repeat: no-repeat;
                     background-size: 300px 240px;
                     transition: all 2s ease-out;
@@ -169,14 +220,13 @@ header {
                         color: black;
                     }
                     .cartName {
-                        position: absolute;
+                        margin: 0 0 10px 0;
+                        position: sticky;
                         top: 0px;
                         left: 0px;
                         width: 100%;
-                        border-bottom: 1px solid;
                         text-align: center;
                         font-size: 20px;
-                        background-color: #fff;
                         color: black;
                     }
                     .cartPrice {
@@ -196,9 +246,12 @@ header {
                             bottom: 8px;
                             width: 45%;
                             height: 35px;
-                            opacity: 80%;
                             background-color: black;
                             color: #fff;
+                            &:hover {
+                                transition: all ease 0.5s;
+                                color: orange;
+                            }
                         }
                         .cartLink {
                             position: absolute;
@@ -206,9 +259,12 @@ header {
                             bottom: 8px;
                             width: 45%;
                             height: 35px;
-                            opacity: 80%;
                             background-color: black;
                             color: #fff;
+                            &:hover {
+                                transition: all ease 0.5s;
+                                color: orange;
+                            }
                         }
                     }
                 }
@@ -224,36 +280,56 @@ header {
 }
 
 .footer {
-    padding: 10px 0 10px 0;
+    font-size: 20px;
+    color: #fff;
+    background: black;
+    min-width: 100%;
+    max-width: 1600px;
+    padding: 20px 30px 20px 30px;
     border-top: solid 1px black;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     font-style: italic;
     font-size: 16px;
     text-align: center;
-    width: 100%;
 }
 .btn {
     margin: 10px 0 0 0;
-    border: 1px solid;
     border-radius: 5px;
     padding: 0 5px;
     font-size: 16px;
-    opacity: 60%;
-    &:hover {
-        color: #6e9c9f;
+}
+.bag__container {
+    max-width: 1263px;
+    margin: 0 auto;
+    .bag__empty {
+        top: 35%;
+        left: 50%;
+        position: absolute;
+        font-size: 24px;
+        transform: translate(-50%, -50%);
+    }
+    .bag__btn {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 250px;
+        height: 50px;
+        // opacity: 80%;
+        background-color: black;
+        color: #fff;
     }
 }
-
 .bagCartContainer {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     border: 1px solid #e2e2e2;
     border-radius: 25px;
     margin: 10px 0;
     padding: 15px;
     position: relative;
+    background-color: #fff;
     .remove {
         cursor: pointer;
         position: absolute;
@@ -306,7 +382,63 @@ header {
         }
     }
 }
-// bag__cart-price
-// bag__cart-name
 
-// bag__img
+.productCard {
+    max-width: 1263px;
+    margin: 0 auto;
+    .productcard__container {
+        padding: 15px;
+        .product__info {
+            padding: 25px;
+            border-radius: 25px;
+            background-color: #fff;
+            border: 1px solid #e2e2e2;
+            display: flex;
+            justify-content: start;
+            gap: 30px;
+            .product__image {
+                position: relative;
+                min-width: 150px;
+                height: 150px;
+
+                div {
+                    position: absolute;
+                    width: 150px;
+                    height: 150px;
+                }
+                img {
+                    width: 150px;
+                    height: 150px;
+                }
+            }
+            .product__text {
+                position: relative;
+                .product__name {
+                    font-size: 20px;
+                    margin: 0 0 10px 0;
+                }
+                .product__desc {
+                    font-size: 16px;
+                }
+                .product__buy {
+                    position: absolute;
+                    bottom: 0;
+                    width: 140px;
+                    height: 35px;
+                    opacity: 80%;
+                    background-color: black;
+                    color: #fff;
+                }
+            }
+        }
+        .product__characteristic {
+            margin: 0 0px 0 0;
+            height: 150px;
+            white-space: nowrap;
+            font-size: 16px;
+            .txt {
+                margin: 5px;
+            }
+        }
+    }
+}
